@@ -1,40 +1,29 @@
 package models.osm;
 
-import java.awt.geom.Path2D;
-import java.util.ArrayList;
+import models.geometry.BoundingBox;
+
+import java.awt.*;
 import java.util.HashMap;
 import java.util.List;
-import java.util.Map;
-import java.awt.*;
 
 public class Way extends Element {
-    private List<Node> nodes;
-    private final HashMap<String, String> tags;
+    private final List<Node> nodes;
 
-    public Way(long id, List<Node> nodes, HashMap<String, String> tags) {
-        super(id);
+    public Way(long id, HashMap<String, String> tags, List<Node> nodes) {
+        super(id, tags, computeMbr(nodes), getAreaShoelace(nodes));
         this.nodes = nodes;
-        this.tags = tags;
-        this.setArea(calculateArea(nodes));
-    }
-    public List<Node>getNodes(){
-        return nodes;
-    }
-    public HashMap<String, String> getTags() {
-        return tags;
     }
 
-    @Override
-    public void draws(Graphics2D gc) {
-
+    static private BoundingBox computeMbr(List<Node> nodes) {
+        return BoundingBox.computeMbr(nodes);
     }
 
-    private double calculateArea(List<Node> nodes){
+    static private double getAreaShoelace(List<Node> nodes) {
         if (nodes == null || nodes.size() < 3) return 0; //Hvis der er under 3 noder er areal 0
 
         //Hvis den første node ikke er den samme som den sidste, er way'en ikke lukket og har ikke noget areal
-        Node first = nodes.get(0);
-        Node last = nodes.get(nodes.size() - 1);
+        Node first = nodes.getFirst();
+        Node last = nodes.getLast();
         boolean isClosed = first.getId() == last.getId();
         if (!isClosed) return 0;
 
@@ -48,8 +37,18 @@ public class Way extends Element {
             double lon2 = nodes.get(i + 1).getLon();    //og longitude sammen med næste nodes longitude,
             area += (lon1 * lat2) - (lon2 * lat1);      //og udregner arealet og lægger det til area
         }
+
         return Math.abs(area) / 2.0;
 
         //TODO: Hække bliver i byen tegner oven på veje. Find en løsning på dette
+    }
+
+    public List<Node> getNodes() {
+        return nodes;
+    }
+
+    @Override
+    public void draws(Graphics2D gc) {
+
     }
 }
